
Fixed retry algorithm.
----------------------------------------------------------------------
Mon Jun  2 14:15:55 2003                        Michael Jennings (mej)

Don't bitch about symlinks that are already there.
----------------------------------------------------------------------
Mon Jun  2 14:17:26 2003                        Michael Jennings (mej)

Make sure apt is present and working, and remove old symlinks rather
than failing.
----------------------------------------------------------------------
Mon Jun  2 12:30:45 2003                        Michael Jennings (mej)

Don't commit right away, just add/remove stuff.
----------------------------------------------------------------------
Mon Jun  2 14:42:30 2003                        Michael Jennings (mej)

Working on fixing uptool to not nuke packages of other architectures
than the current one.
----------------------------------------------------------------------
Mon Jun  2 14:45:28 2003                        Michael Jennings (mej)

Oops, forgot to nuke that macro.
----------------------------------------------------------------------
Mon Jun  2 14:47:13 2003                        Michael Jennings (mej)

Forgot a ) too.
----------------------------------------------------------------------
Wed Jun 18 16:58:23 2003                        Michael Jennings (mej)

Fixed handling of top-level warning/debug messages.

Updated uptool to do automated version checking using a Perl version
of my LibAST version comparison function.
----------------------------------------------------------------------
Sat Aug  2 13:10:33 2003                        Michael Jennings (mej)

Fix for newer (RH9) rpm.
----------------------------------------------------------------------
Sun Nov 30 13:10:53 2003                        Michael Jennings (mej)

Changed srctool test mode to "local" mode.  And made it work right.
----------------------------------------------------------------------